# MedCore

./: BACKEND_API_SPECS.md  LICENSE  README.md  index.html  style.css
backend/: .env  .gitignore  README.md  gen_token.py  main.py  pyproject.toml  requirements.txt  requirments.txt  start_server.bat
backend/app/: main.py  sql
backend/app/core/: .env  config.py  rbac.py  security.py  supabase_admin.py  supabase_client.py
backend/app/template/: welcome_patient.html
backend/scripts/: init_db.py  profile_db.py
backend/sql/: DLQ_Table.sql  assign_permission_to_role.sql  assign_role_to_user.sql  clinician_patient_table.sql  clinicians.sql  constraints_for_role.sql  constrint_uniqeness_primarykey_id.sql  create_lab_file_storage.sql  create_organization_table.sql  create_patient_access_grants_table.sql  create_prescription_table.sql  create_reminder_table.sql  fix_idempotency_at_db.sql  index_term_search.sql  index_user_roles_premission_table.sql  insert_permission.sql  insert_role_permission_to_permission.sql  insert_roles.sql  insert_terms_lookup.sql  inset_system_to_roles.sql  lookup_tables.sql  map_roles_to_permissions.sql  onboading_invite__table.sql  organization_role_desc_user.sql  organization_table_col_additions.sql  patient_profile_img.sql  patients.sql  permission_for_veiw_patient_timeline.sql  profiles.sql  read_patient_summary.sql  records.sql  role_definer.sql  role_permissions.sql  seed_role_permission_mappng.sql  seed_system_and_organization_role.sql  user_permissions.sql  user_role.sql  user_roles.sql
backend/sql/Audit_Table/: audit_table.sql
(+316 files in other folders)
