[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.31",
    "psycopg2>=2.9.11",
    "pydantic-extra-types>=2.11.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-dotenv-vault>=0.7.0",
    "python-jose[cryptography]>=3.5.0",
    "qrcode[pil]>=8.2",
    "resend>=2.30.1",
    "supabase>=2.27.1",
    "supabase-auth>=2.27.1",
    "uvicorn[standard]>=0.40.0",
]
